--- a/Sample.Hosted/Pages/Shared/_SidebarActionbarBadges.cshtml
+++ b/Sample.Hosted/Pages/Shared/_SidebarActionbarBadges.cshtml
@@ -1,8 +1,10 @@
 @model DevelopmentStatus
 @using DRN.Framework.SharedKernel.Enums
 @using DRN.Framework.Utils.Models
+
+@inject IAppSettings AppSettings
 @{
-    var environment = $"{ScopeContext.Settings.Environment.ToString()} Environment";
+    var environment = $"{AppSettings.Environment.ToString()} Environment";
     var prototypeModels = Model.Models.Where(m => m.Flags.NpgsqlDbContextOptionsPrototypeFlag).ToArray();
     var prototypeModelInfos = prototypeModels
         .Select(m => $"{m.Name} (UseWhenMigrationExists: {m.Flags.UsePrototypeModeWhenMigrationExists})")
