page for nested page support

--- a/Sample.Hosted/Pages/Shared/_Navbar.cshtml
+++ b/Sample.Hosted/Pages/Shared/_Navbar.cshtml
@@ -46,7 +46,7 @@
                         </button>
                         <ul class="dropdown-menu dropdown-menu-end" data-bs-theme="light" aria-labelledby="navbarDropdown">
                             <li>
-                                <a class="dropdown-item" asp-page="@Get.Page.UserProfile.Details">My Profile</a>
+                                <a class="dropdown-item" asp-page="@Get.Page.User.Profile.Details">My Profile</a>
                             </li>
                             <li>
                                 <hr class="dropdown-divider">
