--- a/Sample.Hosted/Pages/Shared/_SidebarCollapsible.cshtml
+++ b/Sample.Hosted/Pages/Shared/_SidebarCollapsible.cshtml
@@ -78,7 +78,7 @@
                         <a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">New...</a>
                     </li>
                     <li>
-                        <a href="@Get.Page.UserProfile.Details" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Profile</a>
+                        <a href="@Get.Page.User.Profile.Details" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Profile</a>
                     </li>
                     <li>
                         <a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Settings</a>
