--- a/Sample.Hosted/Pages/User/Profile/Picture.cshtml
+++ b/Sample.Hosted/Pages/User/Profile/Picture.cshtml
@@ -33,7 +33,7 @@
         <!-- Upload and Cancel Buttons -->
         <div class="col-auto">
             <button type="submit" class="btn btn-primary">Upload Picture</button>
-            <a asp-page="@Get.Page.UserProfile.Details" class="btn btn-secondary">Cancel</a>
+            <a asp-page="@Get.Page.User.Profile.Details" class="btn btn-secondary">Cancel</a>
         </div>
     </form>
 </div>
