--- a/Sample.Hosted/Pages/User/Profile/Edit.cshtml
+++ b/Sample.Hosted/Pages/User/Profile/Edit.cshtml
@@ -14,7 +14,7 @@
 @*https://getbootstrap.com/docs/5.3/forms/layout/*@
 @*https://getbootstrap.com/docs/5.3/layout/columns/*@
 
-<form method="post">
+<form method="post" class="d-flex flex-column flex-grow-1" >
     <div class="card-body">
         <div asp-validation-summary="All" class="text-danger"></div>
 
