DrnDataProtectionContext added + code refactor

--- a/Sample.Hosted/Pages/Shared/_LayoutBase.cshtml
+++ b/Sample.Hosted/Pages/Shared/_LayoutBase.cshtml
@@ -49,7 +49,15 @@ They automatically resolve the correct script and stylesheet paths for both deve
 
     @*
     https://www.jetbrains.com/help/rider/Installing_and_Removing_External_Software_Using_Node_Package_Manager.html
-    https://www.jetbrains.com/help/rider/Configuring_JavaScript_Libraries.html#ws_js_configure_libraries_ts_definition_files*@
+    https://www.jetbrains.com/help/rider/Configuring_JavaScript_Libraries.html#ws_js_configure_libraries_ts_definition_file
+    
+    //To enable intellisense
+    Rider-> Settings -> Languages & Frameworks -> Javascript -> Libraries
+       ->@types/bootstrap (Download as Global)
+       ->@types/jquery (Download as Global)
+       ->@types/jquery.validation (Download as Global)
+       ->@types/jquery-validation-unobstrisive (Download  as Global)
+    *@
 
     <!-- Postload -->
     <script src="buildwww/app/js/appPostload.js" crossorigin="anonymous"></script>
